--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:echo hello word\n",
+    "hello word"
    ]
   },
   {
@@ -35,10 +36,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir new_dir"
    ]
   },
   {
@@ -51,10 +52,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -rf new_dir"
    ]
   },
   {
@@ -67,10 +68,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:echo hello word\n",
+    "hello word"
    ]
   },
   {
@@ -83,10 +85,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir new_dir"
    ]
   },
   {
@@ -99,10 +101,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -rf new_dir"
    ]
   },
   {
@@ -115,10 +117,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "mkdir lorem-copy\n",
+    "cp sed.txt sed-copy.txt\n",
+    "mv sed-copy.txt ../\n",
+    "mv sed-copy.txt lorem-copy"
    ]
   },
   {
@@ -131,10 +137,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cd lorem\n",
+    "cp {at.txt,lorem.txt} ../lorem-copy"
    ]
   },
   {
@@ -147,10 +155,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cat sed.txt\n",
+    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,\n",
+    "totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.\n",
+    "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,\n",
+    "sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.\n",
+    "Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,\n",
+    "sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.\n",
+    "Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,\n",
+    "nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,\n",
+    "vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?(base) MacBook-Pro-de-Francisco:lorem FcoX$"
    ]
   },
   {
@@ -163,10 +181,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cat at.txt\n",
+    "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum\n",
+    "deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non\n",
+    "provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.\n",
+    "Et harum quidem rerum facilis est et expedita distinctio.\n",
+    "Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod\n",
+    "maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.\n",
+    "Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet\n",
+    "ut et voluptates repudiandae sint et molestiae non recusandae.\n",
+    "Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores\n",
+    "alias consequatur aut perferendis doloribus asperiores repellat(base) MacBook-Pro-de-Francisco:lorem FcoX$"
    ]
   },
   {
@@ -179,10 +207,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "wc sed-copy.txt\n",
+    "head -3 sed-copy.txt\n",
+    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,\n",
+    "totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.\n",
+    "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,"
    ]
   },
   {
@@ -195,10 +228,18 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "wc sed-copy.txt\n",
+    "tail -6 sed-copy.txt\n",
+    "sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.\n",
+    "Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,\n",
+    "sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.\n",
+    "Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,\n",
+    "nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,\n",
+    "vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?(base) MacBook-Pro-de-Francisco:lorem-copy FcoX$"
    ]
   },
   {
@@ -211,10 +252,21 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "echo 'Homo homini lupus' >> sed-copy.txt\n",
+    "(base) MacBook-Pro-de-Francisco:lorem-copy FcoX$ cat sed-copy.txt\n",
+    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,\n",
+    "totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.\n",
+    "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,\n",
+    "sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.\n",
+    "Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,\n",
+    "sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.\n",
+    "Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,\n",
+    "nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,\n",
+    "vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Homo homini lupus"
    ]
   },
   {
@@ -227,10 +279,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tail -6 sed-copy.txt\n",
+    "sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.\n",
+    "Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,\n",
+    "sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.\n",
+    "Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,\n",
+    "nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,\n",
+    "vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?Homo homini lupus\n",
+    "(base) MacBook-Pro-de-Francisco:lorem-copy FcoX$"
    ]
   },
   {
@@ -243,10 +302,21 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "sed 's/et/ET/' at.txt\n",
+    "At vero eos ET accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum\n",
+    "deleniti atque corrupti quos dolores ET quas molestias excepturi sint occaecati cupiditate non\n",
+    "provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum ET dolorum fuga.\n",
+    "Et harum quidem rerum facilis est ET expedita distinctio.\n",
+    "Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod\n",
+    "maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.\n",
+    "Temporibus autem quibusdam ET aut officiis debitis aut rerum necessitatibus saepe eveniet\n",
+    "ut ET voluptates repudiandae sint et molestiae non recusandae.\n",
+    "Itaque earum rerum hic tenETur a sapiente delectus, ut aut reiciendis voluptatibus maiores\n",
+    "alias consequatur aut perferendis doloribus asperiores repellat(base) MacBook-Pro-de-Francisco:lorem-copy FcoX$"
    ]
   },
   {
@@ -259,10 +329,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:whoami"
    ]
   },
   {
@@ -275,10 +345,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:pwd"
    ]
   },
   {
@@ -291,10 +361,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:ls *.txt"
    ]
   },
   {
@@ -307,10 +377,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "wc sed.txt\n",
+    "       8     129     873 sed.txt"
    ]
   },
   {
@@ -323,10 +395,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "find . -type f -name 'lorem*' | wc -l"
    ]
   },
   {
@@ -339,10 +412,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:grep -o -i \"et\" at.txt | wc -l"
    ]
   },
   {
@@ -355,10 +428,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:grep -ow \"et\" at.txt | wc -l"
    ]
   },
   {
@@ -371,10 +444,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "grep -o -rw 'et' | wc -w"
    ]
   },
   {
@@ -394,10 +468,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "name=pablo"
    ]
   },
   {
@@ -410,10 +485,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "echo $name\n",
+    "pablo"
    ]
   },
   {
@@ -426,10 +503,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "mkdir pablo"
    ]
   },
   {
@@ -442,10 +520,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "rm -rf pablo"
    ]
   },
   {
@@ -462,7 +541,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -481,7 +560,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,7 +576,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -513,7 +592,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -529,7 +608,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +624,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +640,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
