--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:echo 'Hello World'"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir new_dir"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -r new_dir"
    ]
   },
   {
@@ -67,10 +67,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:echo 'Hello World'"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir new_dir"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -r new_dir"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cp sed.txt ../lorem-copy/"
    ]
   },
   {
@@ -134,6 +134,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "cp at.txt lorem.txt ../lorem-copy/\n",
     "The command:"
    ]
   },
@@ -150,7 +151,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat sed.txt"
    ]
   },
   {
@@ -166,7 +167,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat at.txt lorem.txt"
    ]
   },
   {
@@ -182,7 +183,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: head -3 sed.txt"
    ]
   },
   {
@@ -198,7 +199,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -214,7 +215,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"Homo homini lupus.\" >> sed.txt"
    ]
   },
   {
@@ -230,7 +231,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -246,7 +247,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: sed -i 's/et/ET/g' at.txt"
    ]
   },
   {
@@ -262,7 +263,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: whoami"
    ]
   },
   {
@@ -278,7 +279,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:pwd"
    ]
   },
   {
@@ -294,7 +295,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:ls"
    ]
   },
   {
@@ -310,7 +311,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: wc -l sed.txt"
    ]
   },
   {
@@ -326,7 +327,9 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find . -name \"lorem*\"\n",
+    "\n",
+    "find . -name \"lorem*\" | grep -c '^\\.\\/'\n"
    ]
   },
   {
@@ -342,7 +345,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:grep -w \"et\" at.txt"
    ]
   },
   {
@@ -358,7 +361,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -c \"et\" at.txt\n"
    ]
   },
   {
@@ -374,7 +377,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -c \"et\" *txt "
    ]
   },
   {
@@ -397,7 +400,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:name=\"Albert\""
    ]
   },
   {
@@ -413,7 +416,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"Hola hola, $name!\""
    ]
   },
   {
@@ -429,7 +432,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir \"$name\""
    ]
   },
   {
@@ -445,7 +448,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rmdir \"$name\""
    ]
   },
   {
@@ -465,7 +468,13 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "for file in lorem\n",
+    "do\n",
+    "echo \"$file\"\n",
+    "len=${#file}\n",
+    "echo \"$file has $len character length\"\n",
+    "done\n"
    ]
   },
   {
@@ -484,7 +493,12 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "ps\n",
+    "      PID    PPID    PGID     WINPID   TTY         UID    STIME COMMAND\n",
+    "     1078       1    1078      15028  ?         197609 17:46:25 /usr/bin/mintty\n",
+    "     1079    1078    1079       8384  pty0      197609 17:46:25 /usr/bin/bash\n",
+    "     1120    1079    1120      10208  pty0      197609 17:47:18 /usr/bin/ps\n"
    ]
   },
   {
@@ -493,14 +507,14 @@
     "lang": "en"
    },
    "source": [
-    "#### Displays information about your processor on the screen"
+    "#### Displays information about your processor on the screenº"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: lscpu"
    ]
   },
   {
@@ -516,7 +530,10 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "alias a='albert'\n",
+    "alias t='trebla'\n",
+    "alias ap='albertprats'"
    ]
   },
   {
@@ -532,7 +549,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tar -cvf lorem-compressed.tar.gz /c/Users/lgrhd/OneDrive/Escritorio/Ironhack/lab-bash/lorem /c/Users/lgrhd/OneDrive/Escritorio/Ironhack/lab-bash/lorem-copy\n"
    ]
   },
   {
@@ -548,7 +565,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tar -xzf lorem-compressed.tar.gz lorem-uncompressed"
    ]
   },
   {
@@ -564,7 +581,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tar -xzf lorem-compressed.tar.gz lorem-uncompressed\n"
    ]
   }
  ],
@@ -584,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
