--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"hello world\""
    ]
   },
   {
@@ -35,10 +35,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -51,10 +51,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -r new_dir"
    ]
   },
   {
@@ -67,10 +67,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"hello world\""
    ]
   },
   {
@@ -83,10 +83,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -99,10 +99,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -r new_dir"
    ]
   },
   {
@@ -115,10 +115,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cp sed.txt ../lorem-copy"
    ]
   },
   {
@@ -131,10 +131,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cp at.txt lorem.txt ../lorem-copy"
    ]
   },
   {
@@ -147,10 +147,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat sed.txt"
    ]
   },
   {
@@ -163,10 +163,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat at.txt lorem.txt"
    ]
   },
   {
@@ -179,10 +179,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: head -3 sed.txt"
    ]
   },
   {
@@ -195,10 +195,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -211,10 +211,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"Homo homini lupus\" >> sed.txt"
    ]
   },
   {
@@ -227,10 +227,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -243,10 +243,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: sed -i 's/et/ET/g' at.txt"
    ]
   },
   {
@@ -259,10 +259,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: whoami"
    ]
   },
   {
@@ -275,10 +275,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: pwd"
    ]
   },
   {
@@ -291,10 +291,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find . *txt"
    ]
   },
   {
@@ -307,10 +307,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:  wc sed.txt"
    ]
   },
   {
@@ -323,10 +323,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find . -type f -name \"lorem*\" | wc"
    ]
   },
   {
@@ -339,10 +339,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep \"et\" at.txt"
    ]
   },
   {
@@ -355,10 +355,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep \"et\" at.txt | wc -l"
    ]
   },
   {
@@ -371,10 +371,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ grep -c \"et\" *"
    ]
   },
   {
@@ -394,10 +394,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: a=Ramses"
    ]
   },
   {
@@ -410,10 +410,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo $a"
    ]
   },
   {
@@ -426,10 +426,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir $a"
    ]
   },
   {
@@ -442,10 +442,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -r $a"
    ]
   },
   {
@@ -462,7 +462,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -481,7 +481,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,10 +497,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tasklist"
    ]
   },
   {
@@ -513,10 +513,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: "
    ]
   },
   {
@@ -529,7 +529,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +545,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +561,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "nbTranslate": {
    "displayLangs": [
