--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -35,10 +35,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -51,10 +51,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -r new_dir"
    ]
   },
   {
@@ -67,10 +67,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -83,10 +83,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -99,10 +99,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -r new_dir"
    ]
   },
   {
@@ -115,10 +115,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cp sed.txt ../lorem-copy"
    ]
   },
   {
@@ -131,10 +131,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cp at.txt  lorem.txt ../lorem-copy"
    ]
   },
   {
@@ -147,10 +147,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "cat sed.txt"
    ]
   },
   {
@@ -163,10 +163,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cat at.txt lorem.txt"
    ]
   },
   {
@@ -179,10 +179,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: head -3 sed.txt"
    ]
   },
   {
@@ -195,10 +195,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -211,10 +211,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"Homo homini lupus\" >> sed.txt "
    ]
   },
   {
@@ -227,10 +227,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt\n",
+    "\n",
+    "grep \"Homo homini lupus\" sed.txt"
    ]
   },
   {
@@ -243,10 +245,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: sed 's/et/ET/g' at.txt\n",
+    "\n",
+    "#mac"
    ]
   },
   {
@@ -259,10 +263,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: whoami paulbancelin"
    ]
   },
   {
@@ -275,10 +279,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: pwd\n",
+    "/Users/paulbancelin/desktop/lab-bash/lorem-copy"
    ]
   },
   {
@@ -291,10 +296,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find * txt"
    ]
   },
   {
@@ -307,10 +312,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:  wc sed.txt\n",
+    "       8     129     873 sed.txt"
    ]
   },
   {
@@ -323,10 +329,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find . -name \"lorem*\" | wc -l\n",
+    "       1"
    ]
   },
   {
@@ -339,10 +346,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:grep \"et\" at.txt \n"
    ]
   },
   {
@@ -355,10 +362,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep \"et\" at.txt | wc -l\n",
+    "       7\n"
    ]
   },
   {
@@ -371,10 +379,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -c \"et\" *\n"
    ]
   },
   {
@@ -394,10 +402,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:(base) MacBook-Air-de-Paul:lab-bash paulbancelin$ name=Paul\n",
+    "(base) MacBook-Air-de-Paul:lab-bash paulbancelin$ $name\n",
+    "-bash: Paul: command not found\n"
    ]
   },
   {
@@ -410,10 +420,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:(base) MacBook-Air-de-Paul:lab-bash paulbancelin$ echo $name\n",
+    "Paul\n"
    ]
   },
   {
@@ -426,10 +437,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:(base) MacBook-Air-de-Paul:lab-bash paulbancelin$ mkdir $name\n",
+    "(base) MacBook-Air-de-Paul:lab-bash paulbancelin$ ls\n",
+    "Paul\t\tfolder\t\tlorem-copy\n",
+    "README.md\tlorem\t\tsolutions.ipynb\n",
+    " "
    ]
   },
   {
@@ -442,10 +457,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:(base) MacBook-Air-de-Paul:lab-bash paulbancelin$ ls\n",
+    "README.md\tfolder\t\tlorem\t\tlorem-copy\tsolutions.ipynb\n"
    ]
   },
   {
@@ -462,10 +478,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: (base) MacBook-Air-de-Paul:lorem paulbancelin$ for file_name in * ; do echo ${#file_name} ; done"
    ]
   },
   {
@@ -481,7 +497,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,7 +513,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -513,7 +529,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -529,7 +545,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +561,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +577,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "nbTranslate": {
    "displayLangs": [
