--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"Hello World\""
    ]
   },
   {
@@ -35,10 +35,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir new_dir"
    ]
   },
   {
@@ -51,58 +51,10 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "The command:"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "lang": "en"
-   },
-   "source": [
-    "#### Print Hello World to console."
-   ]
-  },
-  {
-   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "en"
-   },
-   "source": [
-    "#### Create a new directory called new_dir."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "The command:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "en"
-   },
-   "source": [
-    "#### Delete that directory."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "The command:"
+    "The command:rm -r new_dir"
    ]
   },
   {
@@ -115,10 +67,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir lorem-copy \n",
+    "cp sed.txt sed-copy.txt\n",
+    "mv sed-copy.txt ../lorem-copy"
    ]
   },
   {
@@ -131,10 +85,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cp at.txt lorem.txt ../lorem-copy"
    ]
   },
   {
@@ -147,10 +101,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cat sed.txt"
    ]
   },
   {
@@ -163,10 +117,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:cat at.txt lorem.txt"
    ]
   },
   {
@@ -179,10 +133,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:head -2 ../lorem-copy/sed-copy.txt"
    ]
   },
   {
@@ -195,10 +149,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -2 sed-copy.txt"
    ]
   },
   {
@@ -211,10 +165,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:echo Homo homini lupus. >> sed-copy.txt"
    ]
   },
   {
@@ -227,10 +181,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:tail -2 sed-copy.txt"
    ]
   },
   {
@@ -243,10 +197,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: sed -i 's/et/ET/g' at.txt"
    ]
   },
   {
@@ -259,10 +213,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:whoami"
    ]
   },
   {
@@ -275,10 +229,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:pwd"
    ]
   },
   {
@@ -291,10 +245,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:ls *txt ../loren"
    ]
   },
   {
@@ -307,10 +261,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:wc ../lorem/sed.txt"
    ]
   },
   {
@@ -323,10 +277,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: ls -dq *lorem* | wc -l"
    ]
   },
   {
@@ -339,10 +293,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep \" et \" at.txt"
    ]
   },
   {
@@ -355,10 +309,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:grep -ow \"et\" at.txt |wc -l"
    ]
   },
   {
@@ -371,7 +325,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -394,10 +348,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:name=\"PaulaMachado\""
    ]
   },
   {
@@ -410,10 +364,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:echo $name"
    ]
   },
   {
@@ -426,10 +380,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:mkdir $name"
    ]
   },
   {
@@ -442,10 +396,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm -r $name"
    ]
   },
   {
@@ -462,7 +416,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -481,7 +435,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,7 +451,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -513,7 +467,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -529,7 +483,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +499,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +515,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
