--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -35,10 +35,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -51,10 +51,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -r new_dir"
    ]
   },
   {
@@ -67,10 +67,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -83,10 +83,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -99,10 +99,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -r new_dir"
    ]
   },
   {
@@ -115,10 +115,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cp sed.txt lorem-copy"
    ]
   },
   {
@@ -131,10 +131,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cp lorem.txt sed.txt lorem-copy"
    ]
   },
   {
@@ -147,10 +147,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat sed.txt"
    ]
   },
   {
@@ -163,10 +163,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat at.txt cat lorem.txt"
    ]
   },
   {
@@ -179,10 +179,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: head -3 sed.txt"
    ]
   },
   {
@@ -195,10 +195,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -211,10 +211,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:  echo \"Homo homini lupus\" >> sed.txt"
    ]
   },
   {
@@ -227,10 +227,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -243,10 +243,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: sed 's/et/ET/g' at.txt"
    ]
   },
   {
@@ -259,10 +259,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: whoami"
    ]
   },
   {
@@ -275,10 +275,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: pwd"
    ]
   },
   {
@@ -291,10 +291,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find *.txt"
    ]
   },
   {
@@ -307,10 +307,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: wc sed.txt"
    ]
   },
   {
@@ -323,10 +323,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find . -name 'lorem*' | wc -l"
    ]
   },
   {
@@ -339,10 +339,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -i \"et\" at.txt\n"
    ]
   },
   {
@@ -355,10 +355,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -ow 'et' at.txt | wc -1"
    ]
   },
   {
@@ -371,10 +371,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -c 'et' *txt"
    ]
   },
   {
@@ -394,10 +394,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: name=Jose_Marin"
    ]
   },
   {
@@ -410,10 +410,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo $name"
    ]
   },
   {
@@ -426,10 +426,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir \"$name\""
    ]
   },
   {
@@ -442,10 +442,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -r Jose_Marin"
    ]
   },
   {
@@ -462,10 +462,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: for file_name in * ; do echo ${#file_name} ; done"
    ]
   },
   {
@@ -481,7 +481,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,7 +497,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -513,7 +513,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -529,7 +529,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +545,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +561,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "nbTranslate": {
    "displayLangs": [
