--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -35,10 +35,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -51,10 +51,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:rm rm -rf new_dir"
    ]
   },
   {
@@ -67,10 +67,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -83,10 +83,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -99,10 +99,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -115,10 +115,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "\n",
+    "mkdir lorem-copy\n",
+    "cd lorem\n",
+    "cp sed.txt ../lorem-copy\n"
    ]
   },
   {
@@ -131,10 +135,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cp at.txt lorem.txt ../lorem-copy"
    ]
   },
   {
@@ -147,10 +151,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat sed.txt"
    ]
   },
   {
@@ -163,10 +167,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:  cat at.txt lorem.txt"
    ]
   },
   {
@@ -179,10 +183,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: head -3 sed.txt"
    ]
   },
   {
@@ -195,10 +199,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -211,10 +215,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo \"Homo homini lupus.\" >> sed.txt"
    ]
   },
   {
@@ -227,10 +231,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tail -3 sed.txt"
    ]
   },
   {
@@ -243,10 +247,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: sed 's/et/ET' at.txt"
    ]
   },
   {
@@ -259,10 +263,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: whoami"
    ]
   },
   {
@@ -275,10 +279,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: pwd"
    ]
   },
   {
@@ -291,10 +295,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "cd lorem\n",
+    "find *.txt"
    ]
   },
   {
@@ -307,10 +313,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: wc -l sed.txt"
    ]
   },
   {
@@ -323,10 +329,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: find . -name 'lorem*' | wc -l"
    ]
   },
   {
@@ -339,10 +345,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -i \"et\" lorem/at.txt"
    ]
   },
   {
@@ -355,10 +361,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: grep -ow \"et\" lorem/at.txt | wc -l"
    ]
   },
   {
@@ -371,10 +377,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "cd lorem-copy\n",
+    "grep -c \"et\" *"
    ]
   },
   {
@@ -394,10 +402,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: name=Paula"
    ]
   },
   {
@@ -410,10 +418,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo $name"
    ]
   },
   {
@@ -426,10 +434,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir $name"
    ]
   },
   {
@@ -442,10 +450,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: rm -rf $name"
    ]
   },
   {
@@ -462,10 +470,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "ls\n",
+    "\n",
+    "for file_name in * ; do echo ${#file_name} ; done\n",
+    "\n",
+    " for file_name in *\n",
+    "> do echo $file_name \"has\" ${#file_name} \"characters length\"\n",
+    "done\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -481,7 +499,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,7 +515,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -513,7 +531,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -529,7 +547,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +563,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +579,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
