--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -19,10 +19,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: echo Hello World"
    ]
   },
   {
@@ -35,10 +35,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: mkdir new_dir"
    ]
   },
   {
@@ -51,58 +51,10 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "The command:"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "lang": "en"
-   },
-   "source": [
-    "#### Print Hello World to console."
-   ]
-  },
-  {
-   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The command:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "en"
-   },
-   "source": [
-    "#### Create a new directory called new_dir."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "The command:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "en"
-   },
-   "source": [
-    "#### Delete that directory."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "The command:"
+    "The command: rm -rf new_dir"
    ]
   },
   {
@@ -115,10 +67,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "mkdir lorem-copy\n",
+    "cd lorem\n",
+    "cp sed.txt ../lorem-copy"
    ]
   },
   {
@@ -131,10 +86,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cp at.txt lorem.txt ../lorem-copy "
    ]
   },
   {
@@ -147,10 +103,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cat sed.txt"
    ]
   },
   {
@@ -163,10 +120,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cat at.txt lorem.txt"
    ]
   },
   {
@@ -179,10 +137,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "head -3 sed.txt"
    ]
   },
   {
@@ -195,10 +154,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "tail -3 sed.txt"
    ]
   },
   {
@@ -211,10 +171,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "echo \"Add Homo homini lupus\" >> sed.txt"
    ]
   },
   {
@@ -227,10 +188,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "tail -3 sed.txt"
    ]
   },
   {
@@ -243,10 +205,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "sed 's/et/ET' at.txt"
    ]
   },
   {
@@ -259,10 +222,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "whoami"
    ]
   },
   {
@@ -275,10 +239,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "pwd"
    ]
   },
   {
@@ -291,10 +256,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cd lorem\n",
+    "find *.txt"
    ]
   },
   {
@@ -307,10 +274,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cat sed.txt | wc -l"
    ]
   },
   {
@@ -323,10 +291,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "find . -name 'lorem*' | wc -l"
    ]
   },
   {
@@ -339,10 +308,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "grep -i \"et\" lorem/at.txt"
    ]
   },
   {
@@ -355,10 +325,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "grep -ow \"et\" lorem/at.txt | wc -l"
    ]
   },
   {
@@ -371,10 +342,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "cd lorem-copy\n",
+    "grep -c \"et\" *"
    ]
   },
   {
@@ -394,10 +367,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "name=Laura"
    ]
   },
   {
@@ -410,10 +384,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "echo $name"
    ]
   },
   {
@@ -426,10 +401,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "mkdir $name"
    ]
   },
   {
@@ -442,10 +418,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "rm -rf $name"
    ]
   },
   {
@@ -462,10 +439,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "ls\n",
+    "for file_name in * ; do echo ${#file_name} ; done"
    ]
   },
   {
@@ -481,7 +460,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -497,7 +476,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -513,7 +492,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -529,7 +508,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -545,7 +524,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -561,7 +540,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The command:"
@@ -584,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "nbTranslate": {
    "displayLangs": [
