--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -474,16 +474,14 @@
    "metadata": {},
    "source": [
     "The command: \n",
+    "\n",
     "ls\n",
     "\n",
     "for file_name in * ; do echo ${#file_name} ; done\n",
     "\n",
-    " for file_name in *\n",
-    "> do echo $file_name \"has\" ${#file_name} \"characters length\"\n",
-    "done\n",
-    "\n",
-    "\n",
-    "\n"
+    "for file_name in *\n",
+    "do echo $file_name \"has\" ${#file_name} \"characters length\"\n",
+    "done\n"
    ]
   },
   {
@@ -502,7 +500,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "\n",
+    "ps axf"
    ]
   },
   {
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat /proc/cpuinfo"
    ]
   },
   {
@@ -534,7 +534,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "nano ~/.bashrc\n",
+    "\n",
+    "alias c=clear\n",
+    "alias lsa='ls -a'\n",
+    "alias ll='ls -alh'"
    ]
   },
   {
@@ -550,7 +555,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "\n",
+    "tar -czvf lorem-compressed.tar.gz lorem lorem-copy"
    ]
   },
   {
@@ -566,7 +573,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "\n",
+    "mkdir lorem-uncompressed\n",
+    "tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed"
    ]
   },
   {
@@ -582,7 +592,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: \n",
+    "\n",
+    "mkdir lorem-uncompressed\n",
+    "tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed"
    ]
   }
  ],
