--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: ps axf"
    ]
   },
   {
@@ -500,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: cat /proc/cpuinfo"
    ]
   },
   {
@@ -532,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tar -czvf lorem-compressed.tar.gz lorem lorem-copy"
    ]
   },
   {
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed"
    ]
   },
   {
