--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -484,7 +484,7 @@
     "lang": "en"
    },
    "source": [
-    "#### Shows the processes in a hierarchical way that are running on your computer:\n",
+    "Displays the processes in hierarchical form that are running on your computer:\n",
     "\n",
     "- Using the top or htop command\n",
     "- Using the ps command with arguments"
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ ps"
    ]
   },
   {
@@ -526,7 +526,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:\n",
+    "$ touch .bash_profile\n",
+    "alias gs=\"git status\"\n",
+    "alias gpush=\"git push origin main\"\n",
+    "alias gc=\"git commin -m\"\n",
+    "# we need to install an editor apart of visual studio? there is another way to do it throght git bash?"
    ]
   },
   {
@@ -542,7 +547,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command:$ tar -czvf lorem-compressed.tar.gz lorem lorem_copy\n",
+    "# c= means create new archive. z=means compress v=means display the archive creation f=specifies the name of the archive"
    ]
   },
   {
@@ -558,7 +564,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command:"
+    "The command: $ mkdir lorem-uncompressed\n",
+    "$ tar -xzvf lorem-compressed.tar.gz -C lorem-uncompressed/"
    ]
   },
   {
